--- a/index.html
+++ b/index.html
@@ -2,21 +2,39 @@
 <html>
   <head>
     <script src="jquery.js"></script>
+    <script src="moment.js"></script>
     <script src="data_generator.js"></script>
+    <link rel="stylesheet" href="styles.css"></link>
+    <title>twittler</title>
   </head>
   <body>
+    <header>
+      <h1 class="logo">twittler</h1>
+    </header>
+    <section class="tweets-display">
+      
+    </section>
     <script>
 
       $(document).ready(function(){
-        var $body = $('body');
-        $body.html('');
+        var $display = $('section');
 
         var index = streams.home.length - 1;
+        
         while(index >= 0){
           var tweet = streams.home[index];
-          var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message);
-          $tweet.appendTo($body);
+          var $tweet = $('<div class="tweet"></div>');
+          var $user = $('<div class="username"></div>');
+          var $message = $('<p class="message"></p>');
+          var $timestamp = $('<p class="timestamp"></p>');
+          $user.text('@' + tweet.user);
+          $message.text(tweet.message);
+          $timestamp.text(moment(tweet.created_at).fromNow());
+          $user.appendTo($tweet);
+          $message.appendTo($tweet);
+          $timestamp.appendTo($tweet);
+          $('<hr>').appendTo($tweet);
+          $tweet.appendTo($display);
           index -= 1;
         }
 
