Added styling for new tweets button

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     </header>
     
     <section class="tweets-display">
-      <button class="new-tweets">
-      </button>
+      <div class="button-container">
+        <button class="new-tweets">
+        </button>
+      </div>
     </section>
     
     <aside class="user-display">
