--- a/index.html
+++ b/index.html
@@ -32,25 +32,36 @@
             index = streams.home.length - 1,
             newTweets = 0;
         
+        function buildTweets(position) {    
+          var tweet = tweets[position];
+          var $tweet = $('<div class="tweet"></div>');
+          var $userArea = $('<div class="user-area"></div>');
+          var $user = $('<span class="username"></span>');
+          var $message = $('<p class="message"></p>');
+          var $timestamp = $('<p class="timestamp"></p>');
+          $user.text('@' + tweet.user);
+          $user.appendTo($userArea);
+          $message.text(tweet.message);
+          $timestamp.text(moment(tweet.created_at).fromNow());
+          $userArea.appendTo($tweet);
+          $message.appendTo($tweet);
+          $timestamp.appendTo($tweet);
+          $('<hr>').appendTo($tweet);
+          $tweet.appendTo($display);
+          position -= 1;
+          tweetsLoaded += 1;
+        };
+
         function loadAllTweets(){
           while(index >= 0){
-            var tweet = tweets[index];
-            var $tweet = $('<div class="tweet"></div>');
-            var $userArea = $('<div class="user-area"></div>');
-            var $user = $('<span class="username"></span>');
-            var $message = $('<p class="message"></p>');
-            var $timestamp = $('<p class="timestamp"></p>');
-            $user.text('@' + tweet.user);
-            $user.appendTo($userArea);
-            $message.text(tweet.message);
-            $timestamp.text(moment(tweet.created_at).fromNow());
-            $userArea.appendTo($tweet);
-            $message.appendTo($tweet);
-            $timestamp.appendTo($tweet);
-            $('<hr>').appendTo($tweet);
-            $tweet.appendTo($display);
-            index -= 1;
-            tweetsLoaded += 1;
+            buildTweets(index);
+          }
+        };
+
+        function loadNewTweets() {
+          index = tweets.length - 1;
+          while (index >= tweetsLoaded) {
+            buildTweets(index);
           }
         };
 
