--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
 
       $(document).ready(function(){
         var $display = $('section');
+        var $button = $('.button-container');
 
         var tweets = streams.home,
             tweetsLoaded = 0,
-            index = streams.home.length - 1,
+            index = 0,
             newTweets = 0;
         
-        function buildTweets(position) {    
-          var tweet = tweets[position];
+        function buildTweets() {    
+          var tweet = tweets[index];
           var $tweet = $('<div class="tweet"></div>');
           var $userArea = $('<div class="user-area"></div>');
           var $user = $('<span class="username"></span>');
@@ -47,25 +48,18 @@
           $message.appendTo($tweet);
           $timestamp.appendTo($tweet);
           $('<hr>').appendTo($tweet);
-          $tweet.appendTo($display);
-          position -= 1;
+          $tweet.insertAfter($button);
+          index += 1;
           tweetsLoaded += 1;
         };
 
-        function loadAllTweets(){
-          while(index >= 0){
-            buildTweets(index);
+        function loadTweets(){
+          while(index <= tweets.length - 1){
+            buildTweets();
           }
         };
 
-        function loadNewTweets() {
-          index = tweets.length - 1;
-          while (index >= tweetsLoaded) {
-            buildTweets(index);
-          }
-        };
-
-        loadAllTweets();
+        loadTweets();
 
         function checkTweets() {
           newTweets = tweets.length - tweetsLoaded;
@@ -76,8 +70,9 @@
         };
         setInterval(checkTweets, 5000);
 
-        $(".username").on("click", function(){
-          
+        $(".new-tweets").on("click", function() {
+          loadTweets();
+          $(this).hide();
         });
 
       });
