--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         function refresh() {
           $(".new-tweets").show();
-          $(".new-tweets").text("Refresh");
+          $(".new-tweets").text("Load new tweets");
         };
         setInterval(refresh, 5000);
 
@@ -90,7 +90,7 @@
           $(".selected-user").text(clickedUser);
         };
 
-        $(".new-tweets").on("click", function() {
+        $("div").on("click", ".new-tweets", function() {
           loadAllTweets();
           if (selectedUser){
             loadUserTweets(selectedUser);
@@ -98,7 +98,7 @@
           $(this).hide();
         });
 
-        $(".username").on("click", function(event){
+        $(".tweets-display").on("click", ".username", function(event){
           event.preventDefault();
           $(".user-display").show();
           selectedUser = $(this).text();
