Added slyling to column headers

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             loadedTweets += 1;
           }
           var $tweetsHeading = $('<div class="column-heading"></div>');
-          $tweetsHeading.text("All Users");
+          $tweetsHeading.text("@everyone");
           $tweetsHeading.prependTo('.tweets-display');
         };
 
